Fixing cannot run on modern java versions